--- a/index.html
+++ b/index.html
@@ -13,18 +13,23 @@
     <title>Prototype Site of JVillad</title>
 </head>
 <body>
-
-    <header class="site-header"> 
-        <a href="" class="site-logo">John Villad</a>       
-        <nav class="site-nav">
-            <a href="">HOME</a>
-            <a href="#about">ABOUT</a>
-            <a href="#skills">SKILLS</a>
-            <a href="#projects">PROJECTS</a>
-            <a href="#contact">CONTACT</a>
-        </nav>
-    </header>
-
+    <!-- NAV BAR -->
+    <nav>
+            <h4>Supreme John</h4>
+        </div>
+        <ul class="nav-links"> 
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">SKILLS</a></li>
+            <li><a href="#">PROJECTS</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+    <!-- END OF NAV -->
     <section class="intro flex scroll" id="intro">   
         <div class="row">
             <div class="column img">                
@@ -79,6 +84,8 @@
     <footer class="footer">
             <p>Made by John Villad ☕</p>
     </footer> 
+
+    <script src="site.js"></script>
 </body>
 
 </html>
