--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <!-- NAV BAR -->
     <nav>
+        <div class="logo">
             <h4>Supreme John</h4>
         </div>
         <ul class="nav-links"> 
