made some changes to html, style and js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- NAV BAR -->
     <nav>
         <div class="logo">
-            <h3>Supreme John</h3>
+            <h3><a href="index.html">Supreme John</a></h3>
         </div>
         <ul class="nav-links sidebar"> 
             <li><a href="#about">ABOUT</a></li>
@@ -43,7 +43,7 @@
         </div>  
     </section>
     <main>
-
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class="about-section" id="about">
             <h2>About me</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi repudiandae laborum voluptatem voluptatum? Accusamus, sequi aliquid. Ex similique saepe quo in! Sed minima, omnis maxime vel iure esse assumenda ipsam voluptas, architecto sit, non distinctio? Labore modi adipisci id eaque.</p>
